--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,9 +5,21 @@
 # as you do not remove the above attribution and reasonably
 # inform receipients that you have modified the original work.
 
-FROM ubuntu:16.04
+FROM nvidia/cuda:8.0-devel-ubuntu16.04
 
 MAINTAINER Ewan Barr <ewan.d.barr@gmail.com>
+
+# Suppress debconf warnings
+ENV DEBIAN_FRONTEND noninteractive
+
+# Create space for ssh daemon and update the system
+RUN echo 'deb http://us.archive.ubuntu.com/ubuntu trusty main multiverse' >> /etc/apt/sources.list && \
+    apt-get -y check && \
+    apt-get -y update && \
+    apt-get install -y apt-utils apt-transport-https software-properties-common python-software-properties && \
+    apt-get -y update --fix-missing && \
+    apt-get -y upgrade && \
+    apt-get -y install gdb
 
 # Pick up some MOFED dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -50,6 +62,10 @@ RUN apt-get update &&\
     automake \
     autogen \
     libtool \
+    libfftw3-3 \
+    libfftw3-bin \
+    libfftw3-dev \
+    libfftw3-single3 \
     tcpdump \
     csh \
     gcc \
@@ -117,7 +133,6 @@ RUN git clone https://github.com/ewanbarr/psrdada_cpp && \
     cmake -DENABLE_CUDA=false -DCMAKE_INSTALL_PREFIX=/usr/local ../ && \
     make -j 1 && \
     make install && \
-    make clean
 
 #install MKRecv
 WORKDIR $PSRHOME
@@ -129,15 +144,36 @@ RUN git config --global http.sslverify false && \
     make -j 1 && \
     make install
 
-#install MeerTRAP_tests
-WORKDIR $PSRHOME
-RUN git clone https://github.com/krajwade/MeerTRAP_tests.git
+# Install all the cheetah pipeline dependencies
 
-RUN apt-get update && \
-    apt-get install numactl && \
-    rm -rf /var/lib/apt/lists/*    	    
+RUN cd /software/ && \
+    git clone https://gitlab.com/SKA-TDT/cheetah.git && \
+    git clone https://gitlab.com/SKA-TDT/panda.git
 
-#WORKDIR $HOME
-#RUN env | awk '{print "export ",$0}' > $HOME/.profile && \
-#    echo "source $HOME/.profile" >> $HOME/.bashrc
-#USER root
+
+#Install PANDA
+RUN cd /software/panda/ && \
+    mkdir build/ && \
+    cd build/ && \
+    cmake -DENABLE_CUDA=true ../ && \
+    make -j 16 && \
+    make install
+
+#Install Astro-Accelerate
+RUN cd /software/ && \
+    git clone https://github.com/AstroAccelerateOrg/astro-accelerate.git && \
+    cd /software/astro-accelerate/ && \
+    git checkout aa_interface && \
+    mkdir build/ && \
+    cd build/ && \
+    cmake -DENABLE_CUDA=true ../ && \
+    make -j 16 && \
+    make install
+
+# Install cheetah
+RUN cd /software/cheetah/ && \
+    git checkout dev && \
+    mkdir build/ && \
+    cd build/ && \
+    cmake -DENABLE_CUDA=true -DENABLE_PSRDADA=true ../ && \
+    make -j 16
